# sigma

./: .env  .env.docker  .env.example  .gitignore  LICENSE  README.md  docker-compose.dev.yaml  docker-compose.yaml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: build-docker-image.yml  release-integration.yml  release.yml  website.yml
apps/electron/: electron-builder.yml  eslint.config.js  package.json
apps/electron/buildResources/: icon.icns  production.provisionprofile
apps/electron/notarize/: entitlements.mac.plist  notarize.cjs
apps/electron/scripts/: electron-rebuild.js
apps/electron/types/: env.d.ts
apps/logs/errors/: llm-error-2025-05-09T05-52-42.166Z.json  llm-error-2025-06-17T17-35-27.059Z.json  llm-error-2025-06-17T17-35-27.099Z.json  llm-error-2025-06-17T17-35-27.103Z.json  llm-error-2025-06-17T17-35-27.106Z.json  llm-error-2025-06-17T17-35-27.109Z.json  llm-error-2025-06-17T17-35-27.114Z.json  llm-error-2025-06-17T17-35-27.220Z.json  llm-error-2025-06-17T17-35-27.223Z.json  (+1 more)
apps/server/: .eslintrc.js  .gitignore  Dockerfile  cors.json  package.json  trigger.config.ts  tsconfig.json
apps/server/src/: app.module.ts  (+1 more)
apps/web/: .eslintrc.js  next.config.js  package.json  remote-component.config.js  tailwind.config.ts  tsconfig.json
apps/webapp/: .eslintrc.js  .prod.env  Dockerfile  electron.d.ts  entrypoint.sh  next.config.js  next.config.webapp.js  next.d.ts  package.json  remote-component.config.js  tailwind.config.ts  tsconfig.json
apps/website/: .eslintrc.js  next.config.js  package.json  tsconfig.json
docs/: changelog.mdx  introduction.mdx  mint.json
docs/api-reference/: overview.mdx
docs/fundamentals/: chat.mdx  shortcuts.mdx  todo.mdx
docs/integrations/: overview.mdx  slack.mdx
docs/personalisation/: automations.mdx  memory.mdx  sync.mdx
integrations/github/: package.json  pnpm-lock.yaml  rollup.config.mjs  spec.json  tsconfig.json
integrations/gmail/: package.json  pnpm-lock.yaml  rollup.config.mjs  spec.json  tsconfig.json
integrations/hevy/: .gitignore  eslint.config.js  package.json  pnpm-lock.yaml  rollup.config.mjs  spec.json  tsconfig.json  tsup.config.ts
integrations/sigma/: package.json  pnpm-lock.yaml  spec.json  tsconfig.json
integrations/slack/: package.json  pnpm-lock.yaml  rollup.config.mjs  spec.json
sigma-integrations/sigma-agent-sdk/: .gitignore  .prettierrc  mypy.ini  pyproject.toml
sigma-integrations/sigma-agent-sdk/sigma_agent_sdk/: __init__.py  base.py
tooling/eslint-config/: README  internal.js  next.js  package.json  server.js
tooling/typescript-config/: .tsbuildinfo  package.json
(+1021 files in other folders)
